--- a/week-01/day-5/Form/style.css
+++ b/week-01/day-5/Form/style.css
@@ -1,5 +1,5 @@
 body {
-    background-color: #E2DBDB;
+    background-color: #ffffff;
     font-family: Arial, Helvetica, sans-serif;
 }
 
@@ -8,7 +8,7 @@ main {
     width: 620px;
     height: 780px;
     box-sizing: border-box;
-    background-color: #C3C3C3;
+    background-color: #E2DBDB;
     margin: 0 auto;
 
 }
@@ -55,7 +55,7 @@ article {
 
 
 .box2 > div, .box3 > div {
-    margin: 0;
+    margin: 0 0 20px 0;
 }
 
 .box2 span, .box3 span {
@@ -67,12 +67,18 @@ article {
 }
 
 
-.box4 {
+.box4 textarea {
     height: 185px;
-    width: 620px;
+    width: 592px;
+    background-color: white;
 }
 
 .box1 h2 {
     display: inline-block;
 
 }
+
+.box4 p {
+
+}
+
