--- a/week-7/day-5/src/main/resources/templates/nutrition.html
+++ b/week-7/day-5/src/main/resources/templates/nutrition.html
@@ -13,6 +13,7 @@
             <option value="candy">Candy</option>
             <option value="banana">Banana</option>
             <option value="pasta">Pasta</option>
+            <option value="poision">Poision</option>
         </select>
         <p><input type="submit" value="Save"/></p>
     </form>
